--- a/homework-4/css/style.css
+++ b/homework-4/css/style.css
@@ -4,6 +4,7 @@
 	padding: 0px 15px;
 	text-align: center;
 	box-sizing: border-box;
+	margin: 0 auto;
 }
 .content span {
 	font-family: "Baloo Tammudu 2", cursive;
