--- a/homework-9/css/style.css
+++ b/homework-9/css/style.css
@@ -1,38 +1,39 @@
 * {
-	margin: 0px;
-	padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 html,
 body {
-	height: 100%;
+  height: 100%;
 }
 .title {
-	padding: 0px 15px;
-	text-align: center;
-	box-sizing: border-box;
-	margin: 0 auto;
+  padding: 0px 15px;
+  text-align: center;
+  box-sizing: border-box;
+  margin: 0 auto;
 }
 .title p {
-	font-family: "Baloo Tammudu 2", cursive;
-	font-size: 40px;
-	color: #4caf50;
+  font-family: "Baloo Tammudu 2", cursive;
+  font-size: 40px;
+  color: #4caf50;
 }
 
 .container {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	width: 100%;
-	height: 100%;
-	background-color: #f0f8ff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  height: 100%;
+  background-color: #f0f8ff;
 }
 
 .square-wrapper {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 .row {
-	display: flex;
+  display: flex;
 }
