after fix background

--- a/homework-13/css/style.css
+++ b/homework-13/css/style.css
@@ -11,6 +11,7 @@ body {
 body {
 	background-image: url(../img/background.jpg);
 	background-attachment: fixed;
+	background-size: cover;
 }
 .wrapper {
 	height: 100%;
